@@ -36,14 +36,13 @@ my $Proctor = declare 'Proctor', as Dict[
 ];
 
 my $Stopped    = declare 'Stopped',    as  $Proctor, where { $_->{stopped}->is_set || $_->{quit} };
-my $Paused     = declare 'Paused',     as ~$Stopped, where { $_->{paused}->is_set };
 my $NotStopped = declare 'NotStopped', as ~$Stopped;
+my $Unlocked   = declare 'Unlocked',   as  $NotStopped, where { !$_->{lock} };
+my $Locked     = declare 'Locked',     as  $NotStopped, where { $_->{lock} };
+my $Started    = declare 'Started',    as  $Locked, where { $_->{started} };
+my $Paused     = declare 'Paused',     as  $Started, where { $_->{paused}->is_set };
 my $NotPaused  = declare 'NotPaused',  as ~$Paused;
-my $Nominal    = declare 'Nominal',    as  $NotStopped & $NotPaused;
-my $Unlocked   = declare 'Unlocked',   as  $Nominal, where { !$_->{lock} };
-my $Locked     = declare 'Locked',     as  $Nominal, where { $_->{lock} };
-my $Started    = declare 'Started',    as  $Locked,  where { $_->{started} };
-my $Running    = declare 'Running',    as  $Started, where { !$_->{finish} };
+my $Running    = declare 'Running',    as  $NotPaused & $Started, where { !$_->{finish} };
 my $Finished   = declare 'Finished',   as  $Started, where { $_->{finish} };
 
 sub pause_sleep {
